--- a/.classpath
+++ b/.classpath
@@ -16,5 +16,56 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="/usr/local/storm/lib/asm-4.0.jar"/>
+	<classpathentry kind="lib" path="/usr/local/storm/lib/carbonite-1.4.0.jar"/>
+	<classpathentry kind="lib" path="/usr/local/storm/lib/chill-java-0.3.5.jar"/>
+	<classpathentry kind="lib" path="/usr/local/storm/lib/clj-stacktrace-0.2.4.jar"/>
+	<classpathentry kind="lib" path="/usr/local/storm/lib/clj-time-0.4.1.jar"/>
+	<classpathentry kind="lib" path="/usr/local/storm/lib/clojure-1.5.1.jar"/>
+	<classpathentry kind="lib" path="/usr/local/storm/lib/clout-1.0.1.jar"/>
+	<classpathentry kind="lib" path="/usr/local/storm/lib/commons-codec-1.6.jar"/>
+	<classpathentry kind="lib" path="/usr/local/storm/lib/commons-exec-1.1.jar"/>
+	<classpathentry kind="lib" path="/usr/local/storm/lib/commons-fileupload-1.2.1.jar"/>
+	<classpathentry kind="lib" path="/usr/local/storm/lib/commons-io-2.4.jar"/>
+	<classpathentry kind="lib" path="/usr/local/storm/lib/commons-lang-2.5.jar"/>
+	<classpathentry kind="lib" path="/usr/local/storm/lib/commons-logging-1.1.3.jar"/>
+	<classpathentry kind="lib" path="/usr/local/storm/lib/compojure-1.1.3.jar"/>
+	<classpathentry kind="lib" path="/usr/local/storm/lib/core.incubator-0.1.0.jar"/>
+	<classpathentry kind="lib" path="/usr/local/storm/lib/curator-client-2.4.0.jar"/>
+	<classpathentry kind="lib" path="/usr/local/storm/lib/curator-framework-2.4.0.jar"/>
+	<classpathentry kind="lib" path="/usr/local/storm/lib/disruptor-2.10.1.jar"/>
+	<classpathentry kind="lib" path="/usr/local/storm/lib/guava-13.0.jar"/>
+	<classpathentry kind="lib" path="/usr/local/storm/lib/hiccup-0.3.6.jar"/>
+	<classpathentry kind="lib" path="/usr/local/storm/lib/httpclient-4.3.3.jar"/>
+	<classpathentry kind="lib" path="/usr/local/storm/lib/httpcore-4.3.2.jar"/>
+	<classpathentry kind="lib" path="/usr/local/storm/lib/jetty-6.1.26.jar"/>
+	<classpathentry kind="lib" path="/usr/local/storm/lib/jetty-util-6.1.26.jar"/>
+	<classpathentry kind="lib" path="/usr/local/storm/lib/jgrapht-core-0.9.0.jar"/>
+	<classpathentry kind="lib" path="/usr/local/storm/lib/jline-2.11.jar"/>
+	<classpathentry kind="lib" path="/usr/local/storm/lib/joda-time-2.0.jar"/>
+	<classpathentry kind="lib" path="/usr/local/storm/lib/json-simple-1.1.jar"/>
+	<classpathentry kind="lib" path="/usr/local/storm/lib/kryo-2.21.jar"/>
+	<classpathentry kind="lib" path="/usr/local/storm/lib/log4j-over-slf4j-1.6.6.jar"/>
+	<classpathentry kind="lib" path="/usr/local/storm/lib/logback-classic-1.0.6.jar"/>
+	<classpathentry kind="lib" path="/usr/local/storm/lib/logback-core-1.0.6.jar"/>
+	<classpathentry kind="lib" path="/usr/local/storm/lib/math.numeric-tower-0.0.1.jar"/>
+	<classpathentry kind="lib" path="/usr/local/storm/lib/minlog-1.2.jar"/>
+	<classpathentry kind="lib" path="/usr/local/storm/lib/netty-3.2.2.Final.jar"/>
+	<classpathentry kind="lib" path="/usr/local/storm/lib/netty-3.6.3.Final.jar"/>
+	<classpathentry kind="lib" path="/usr/local/storm/lib/objenesis-1.2.jar"/>
+	<classpathentry kind="lib" path="/usr/local/storm/lib/reflectasm-1.07-shaded.jar"/>
+	<classpathentry kind="lib" path="/usr/local/storm/lib/ring-core-1.1.5.jar"/>
+	<classpathentry kind="lib" path="/usr/local/storm/lib/ring-devel-0.3.11.jar"/>
+	<classpathentry kind="lib" path="/usr/local/storm/lib/ring-jetty-adapter-0.3.11.jar"/>
+	<classpathentry kind="lib" path="/usr/local/storm/lib/ring-servlet-0.3.11.jar"/>
+	<classpathentry kind="lib" path="/usr/local/storm/lib/servlet-api-2.5.jar"/>
+	<classpathentry kind="lib" path="/usr/local/storm/lib/servlet-api-2.5-20081211.jar"/>
+	<classpathentry kind="lib" path="/usr/local/storm/lib/slf4j-api-1.6.5.jar"/>
+	<classpathentry kind="lib" path="/usr/local/storm/lib/snakeyaml-1.11.jar"/>
+	<classpathentry kind="lib" path="/usr/local/storm/lib/storm-core-0.9.2-incubating.jar"/>
+	<classpathentry kind="lib" path="/usr/local/storm/lib/tools.cli-0.2.4.jar"/>
+	<classpathentry kind="lib" path="/usr/local/storm/lib/tools.logging-0.2.3.jar"/>
+	<classpathentry kind="lib" path="/usr/local/storm/lib/tools.macro-0.1.0.jar"/>
+	<classpathentry kind="lib" path="/usr/local/storm/lib/zookeeper-3.4.5.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
